prevent content-wrapper overflow

--- a/src/assets/style/less/app.less
+++ b/src/assets/style/less/app.less
@@ -181,6 +181,7 @@ body {
   background-color: #ecf0f5;
   padding-top: 50px;
   position: relative;
+  overflow: hidden;
 }
 
 :root {
